<?xml version="1.0"?>
<package format="2">
  <name>util_caching</name>
  <version>0.0.0</version>
  <description>This package cache arbitrary values which can be recalled by specifying a key</description>

  <license>MRT</license>
  <maintainer email="lingguang.wang@kit.edu">Lingguang Wang</maintainer>
  <author email="lingguang.wang@kit.edu">Lingguang Wang</author>
  <url type="repository">https://gitlab.mrt.uni-karlsruhe.de/MRT/draft/util_caching</url>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>gtest</test_depend>
  <!--
    Documentation for dependencies:
    <build_depend>            Build-time dependency required to build
                              this package, e.g. boost, opencv.
    <build_export_depend>     Exported build-time dependency required to
                              build packages that depend on this package,
                              e.g. boost, opencv.
    <exec_depend>             Execution dependency required to run this
                              package, e.g. boost, opencv.
    <depend>                  Build-time, exported build-time and execution
                              dependency. This is a bundled synonym for
                              <build_depend>, <build_export_depend> and
                              <exec_depend>.
  -->
  <!--
    Example:
    <depend>mrt_opencv</depend>
  -->

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
